--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-standard-react": "11.0.1",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-only-warn": "1.0.3",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.28.0",
     "react": "^17.0.2",
