--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src --ext ts,tsx",
+    "lint": "eslint src --ext ts,tsx --no-eslintrc --config .eslintrc-defatult.json",
     "lint:fix": "yarn lint --fix",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "prepare": "husky install"
@@ -36,7 +36,7 @@
     "web-vitals": "^2.1.0"
   },
   "eslintConfig": {
-    "extends": "./eslintrc.json"
+    "extends": "./.eslintrc.json"
   },
   "browserslist": {
     "production": [
@@ -51,6 +51,6 @@
     ]
   },
   "devDependencies": {
-    "husky": "^7.0.4"
+    "husky": "7.0.4"
   }
 }
